      without additional code
    - qfams_custom_3.php show that it's now possible
      to define one or more item (preselected) that cannot be remove by end-user
    - setElementTemplate() function signature changed (but keep BC) :
      allow to use only one instance of javascript code
    - remove embedded version of TDG (The Definitive Guide)
      now it was included in the new PEAR

    - Old User Guide 1.4.0 that was previously included in past releases, was removed.
      The most up-to-date documentation is now part of the new PEAR Manual.
    - Add unit test suites (for PHPUnit 3.2+) with code coverage around 80%

2008-04-26 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Version 1.4.1 released.

    - copyright bumped to 2008
    - fix bug #13680: XHTML - Need to create a distinct id for all checkboxes
    - all examples and QFAMS produces now XTML 1.0 Strict compliant output

2007-06-09 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Version 1.4.0 released.

    - license change from PHP 3.01 to the new BSD

2007-01-08 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Version 1.3.1 released.

    - fixed javascript file path resource pear installer replacement into getElementJs()

2007-01-06 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Version 1.3.0 released.

    - fixed closing html-styles tags that raised a warning in all examples
    - copyright notice bumped to 2007
    - license fixed to PHP 3.01
    - use namespace for CSS and JS
    - setJsElement is marked as deprecated, since rewrite of JS (external file) with namespace
    - more placeholders into template to support new feature : Live Counter
    - getElementJs return now content of external JS to avoid BC break

2006-04-08 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Version 1.2.0 released.

    This is an add-on features version:
    - add toggle button ability to a dual multi-select boxes.