@@ -4,16 +4,16 @@
  <channel>pear.php.net</channel>
  <summary>Element for HTML_QuickForm that emulate a multi-select.</summary>
  <description>The HTML_QuickForm_advmultiselect package adds an element to the
-HTML_QuickForm package that is two select boxes next to each other
-emulating a multi-select.</description>
+ HTML_QuickForm package that is two select boxes next to each other
+ emulating a multi-select.</description>
  <lead>
   <name>Laurent Laville</name>
   <user>farell</user>
   <email>pear@laurent-laville.org</email>
   <active>yes</active>
  </lead>
- <date>2009-01-29</date>
- <time>15:18:42</time>
+ <date>2009-02-11</date>
+ <time>15:54:52</time>
  <version>
   <release>1.5.0</release>
   <api>1.5.0</api>
@@ -38,11 +38,17 @@ emulating a multi-select.</description>
   allow to use only one instance of javascript code
 - remove embedded version of TDG (The Definitive Guide)
   now it was included in the new PEAR
+- new example qfams_custom_9.php show how to handle fancy options attributes
+  (disabled, style:color background-color ...)
+- handle of persistant options at run-time
+  (see new methods: getPersistantOptions, setPersistantOptions)
+- PEAR_Error instance throws have now a level (exception or error)
+  and a code identified by HTML_QUICKFORM_ADVMULTISELECT_ERROR_INVALID_INPUT constant
 
 * QA
 - Old User Guide 1.4.0 that was previously included in past releases, was removed.
   The most up-to-date documentation is now part of the new PEAR Manual.
-- Add unit test suites (for PHPUnit 3.2+) with code coverage around 80%
+- Add unit test suites (for PHPUnit 3.2+) with code coverage closest to 100% (97.30)
  </notes>
  <contents>
   <dir baseinstalldir="HTML" name="/">
@@ -61,6 +67,7 @@ emulating a multi-select.</description>
     <file baseinstalldir="HTML/QuickForm" name="qfams_custom_6.php" role="doc" />
     <file baseinstalldir="HTML/QuickForm" name="qfams_custom_7.php" role="doc" />
     <file baseinstalldir="HTML/QuickForm" name="qfams_custom_8.php" role="doc" />
+    <file baseinstalldir="HTML/QuickForm" name="qfams_custom_9.php" role="doc" />
     <file baseinstalldir="HTML/QuickForm" name="qfams_multiple_1.php" role="doc" />
     <file baseinstalldir="HTML/QuickForm" name="qfams_multiple_2.php" role="doc" />
     <file baseinstalldir="HTML/QuickForm" name="qfams_template_1.php" role="doc" />
@@ -74,6 +81,9 @@ emulating a multi-select.</description>
      <tasks:replace from="@package_version@" to="version" type="package-info" />
     </file>
     <file name="HTML_QuickForm_advmultiselect_TestSuite_Custom.php" role="test">
+     <tasks:replace from="@package_version@" to="version" type="package-info" />
+    </file>
+    <file name="HTML_QuickForm_advmultiselect_TestSuite_Exception.php" role="test">
      <tasks:replace from="@package_version@" to="version" type="package-info" />
     </file>
    </dir> <!-- /tests -->
@@ -95,10 +105,6 @@ emulating a multi-select.</description>
    <pearinstaller>
     <min>1.5.4</min>
    </pearinstaller>
-   <package>
-    <name>PEAR</name>
-    <channel>pear.php.net</channel>
-   </package>
    <package>
     <name>HTML_Common</name>
     <channel>pear.php.net</channel>
@@ -132,7 +138,7 @@ emulating a multi-select.</description>
     <release>stable</release>
     <api>stable</api>
    </stability>
-   <date>2009-01-29</date>
+   <date>2009-02-11</date>
    <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD</license>
    <notes>* news
 - copyright bump to 2009
@@ -149,11 +155,17 @@ emulating a multi-select.</description>
   allow to use only one instance of javascript code
 - remove embedded version of TDG (The Definitive Guide)
   now it was included in the new PEAR
+- new example qfams_custom_9.php show how to handle fancy options attributes
+  (disabled, style:color background-color ...)
+- handle of persistant options at run-time
+  (see new methods: getPersistantOptions, setPersistantOptions)
+- PEAR_Error instance throws have now a level (exception or error)
+  and a code identified by HTML_QUICKFORM_ADVMULTISELECT_ERROR_INVALID_INPUT constant
 
 * QA
 - Old User Guide 1.4.0 that was previously included in past releases, was removed.
   The most up-to-date documentation is now part of the new PEAR Manual.
-- Add unit test suites (for PHPUnit 3.2+) with code coverage around 80%
+- Add unit test suites (for PHPUnit 3.2+) with code coverage closest to 100% (97.30)
    </notes>
   </release>
   <release>
